# ai_calendar_api

./: .gitignore  main.py  pyproject.toml
